Make a form in new page

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,5 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Add a review for Interstellar</h1>
+    <!-- route name is just a placeholder for now -->
+    <form action="/movies" method="post">
+      <img width="400px" src="https://cdns-images.dzcdn.net/images/cover/5a02690056ec7f97030788109498ac5a/0x1900-000000-80-0-0.jpg" alt="">
+      <div>
+        <button type="submit" name="action" value="like">Like</button>
+        <button type="submit" name="action" value="dislike">Dislike</button>
+      </div>
+      <hr>
+      <h2>Add your review</h2>
+      <div>
+        <label for="reviews"></label>
+        <textarea id="reviews" name="reviews" maxlength="1500"></textarea>
+      </div>
+      <button type="submit">SUBMIT</button>
+    </form>
+  </body>
 </html>
