Update models and schemas

--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -14,10 +14,10 @@
         <label for="coverPhotoUrl">Cover Photo Url</label>
         <input type="text" name="coverPhotoUrl" id="coverPhotoUrl">
       </div>      
-      <div>
+      <!-- <div>
         <button type="submit" name="action" value="like">Like</button>
         <button type="submit" name="action" value="dislike">Dislike</button>
-      </div>
+      </div> -->
       <hr>
       <h2>Add your review</h2>
       <div>
