corrected navv.ejs file

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -6,6 +6,7 @@
     <title>Film Fanatics</title>
   </head>
   <body>
+    <%- include('../partials/nav') %>
     <h1>Welcome to Film Fanatics</h1>
     <hr />
     <% moviesDB.forEach(movie => { %>
