--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -7,11 +7,9 @@
   </head>
 
   <body>
-    <h1>Add a review for Interstellar</h1>
+    <h1>Add a review for Movie</h1>
     <!-- route name is just a placeholder for now -->
     <form action="/movies" method="POST">
-
-
       <div>
         <label for="coverPhotoUrl">Cover Photo Url</label>
         <input type="text" name="coverPhotoUrl" id="coverPhotoUrl" />
