--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -8,13 +8,14 @@
   <body>
     <h1>Movie Reviewer Page</h1>
     <section>
-      <h2>Movie Name:<%= movie.name %></h2>
+      <h2>Movie Name:<%= movie.movieName %></h2>
+      <h2>Genre:<%= movie.genre %></h2>
       <% if (movie.stillinTheaters) { %>
       <p>This movie is still in theaters</p>
       <% } else { %>
       <p>This movie is no longer in theaters</p>
       <% } %>
     </section>
-    <section><% if (movie.reviews)</section>
+    <section><% if (movie.reviews)%></section>
   </body>
 </html>
