--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,9 +8,9 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="/movies">Movies</a>
+
       <a href="/movies/new">Add A Movie</a>
-      <a href="/reviews">Reviews</a>
+      <!-- <a href="/reviews">Reviews</a> -->
     </nav>
   </body>
 </html>
