Render cover photos for movies on index page

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -11,7 +11,7 @@
     <hr />
     <% movies.forEach(movie => { %>
     <h2><%=movie.movieName%></h2>
-    <img width="370px" src="<%=movie.coverUrl%>" alt="" />
+    <img width="370px" src="<%=movie.coverPhotoUrl%>" alt="" />
     <p>Release Year: <%=movie.releaseYear%></p>
     <p>Director: <%=movie.director%></p>
     <p>Genre: <%=movie.genre%></p>
