--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -17,6 +17,21 @@
       <% } else { %>
       <p>This movie is no longer in theaters</p>
       <% } %>
+      <form action="/movies" method="POST">
+        <h2>Add your review</h2>
+
+        <div>
+          <label for="userName">User Name: </label>
+          <input type="text" name="userName" id="userName" />
+        </div>
+
+        <div>
+          <label for="reviews"></label>
+          <textarea id="reviews" name="reviews" maxlength="1500"></textarea>
+        </div>
+
+        <button type="submit">SUBMIT</button>
+      </form>
     </section>
   </body>
 </html>
