--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav>
+    <nav class="text-center text-blue-800 bg-gray-200 animate-pulse"
       <a href="/">Home</a>
 
       <a href="/movies/new">Add A Movie</a>
