--- a/views/movies/review.ejs
+++ b/views/movies/review.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/movies/review" method="POST">
+    <form action="/movies/review/<%=movieId%>" method="POST">
         <div>
             <label for="userName">User Name: </label>
             <input type="text" name="userName" id="userName" required />
