--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -7,26 +7,26 @@
   </head>
 
   <body>
-    <h1>Add a review for Movie</h1>
+    <!-- <h1 class="text-xl">Add a review for Movie</h1> -->
     <form action="/movies" method="POST">
       <div>
         <label for="coverPhotoUrl">Cover Photo Url</label>
         <input type="text" name="coverPhotoUrl" id="coverPhotoUrl" />
       </div>
-    
+
       <hr />
       <h2>Add your review</h2>
-      
+
       <div>
         <label for="userName">User Name: </label>
         <input type="text" name="userName" id="userName" />
-      </div>  
+      </div>
 
       <div>
         <label for="reviews"></label>
         <textarea id="reviews" name="reviews" maxlength="1500"></textarea>
       </div>
-      
+
       <button type="submit">SUBMIT</button>
     </form>
   </body>
