--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -17,10 +17,24 @@
       <% } else { %>
       <p>This movie is no longer in theaters</p>
       <% } %>
-      
-      <hr>
 
-      <a href="/movies/review/<%=movie._id%>">Add a review for this movie</a>
+      <hr />
+
+      <a href="/movies/<%=movie._id%>/review/new"
+        >Add a review for this movie</a
+      >
     </section>
   </body>
 </html>
+<section>
+  <% movie.userReviews.forEach(userReview =>{%>
+  <ul>
+    <li><%= userReview.reviews %></li>
+    <li><%= userReview.userName %></li>
+  </ul>
+  <%})%>
+</section>
+
+<form method="POST" action="/movies/<%=movie._id%>?_method=DELETE">
+  <button type="submit">Delete Movie</button>
+</form>
