--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,8 +8,9 @@
   <body>
     <nav class="text-center text-blue-800 bg-gray-200 animate-pulse"
       <a href="/">Home</a>
-
-      <a href="/movies/new">Add A Movie</a>
+     <a href="/">Movie List</a>
+      <a href="/movies/new">Add A Review</a>
+      <a href = "movies/review">Reviews</a>
       <!-- <a href="/reviews">Reviews</a> -->
     </nav>
   </body>
