--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,8 +10,9 @@
       <a href="/">Home</a>
      <a href="/">Movie List</a>
       <a href="/movies/new">Add A Review</a>
-      <a href = "movies/review">Reviews</a>
-      <!-- <a href="/reviews">Reviews</a> -->
+      <a href = "/movies/review">Reviews</a>
+      <a href = "/movies/newmovie">Create A New Movie</a>
+     
     </nav>
   </body>
 </html>
