style index page with tailwind

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -7,28 +7,35 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="public/main.css" />
   </head>
-  <body>
-    <div class="bg-red-200 bg-auto min-h-screen justify-center">
-      <%- include('../partials/nav') %>
-      <h1 class="text-center text-4xl underline">Film Fanatics</h1>
-      <hr />
+  <body class="text-center bg-teal-200  ">
+    <%- include('../partials/nav') %>
+    <h1 class="text-3xl font-bold m-3">FILM FANATICS</h1>
+    <hr />
+    <div class=" grid grid-cols-4  p-3  ">
       <% movies.forEach(movie => { %>
-      <h2 class="text-black animate-pulse p-3 text-2xl">
-        <%=movie.movieName%>
-      </h2>
-      <img
-        class="w-65 h-65 md:h-48 lg:h-50 object cover flex-wrap"
-        src="<%=movie.coverPhotoUrl%>"
-        alt=""
-      />
-      <p class="p-2 text-purple-600">Release Year: <%=movie.releaseYear%></p>
-      <p class="text-purple-600 p-2">Director: <%=movie.director%></p>
-      <p class="text-purple-600 p-2">Genre: <%=movie.genre%></p>
-      <p class="text-purple-600 font-serif p-2 font-medium">
-        Description: <%=movie.description%>
-      </p>
-      <a href="/movies/<%= movie._id%>">See more</a>
-      <hr />
+      <div class="
+      w-80 grid p-5 mb-7  bg-white
+      font-semibold border-2 bg-green-300
+      rounded-xl">
+        
+          <h2 class="text-2xl font-semibold" >
+            <%=movie.movieName%>
+          </h2>
+          <img 
+            width="500px"
+            class="rounded-xl"
+            src="<%=movie.coverPhotoUrl%>"
+            alt=""
+          />
+          <p class="text-sm">Release Year: <%=movie.releaseYear%></p>
+          <p class="text-sm">Director: <%=movie.director%></p>
+          <p class="text-sm">Genre: <%=movie.genre%></p>
+          <p class="text-sm">
+            Description: <%=movie.description%>
+          </p>
+          <a class="underline " href="/movies/<%= movie._id%>">See more</a>
+          <hr />
+        </div>
       <%})%>
     </div>
   </body>
