started styling the newmovie.ejs folder

--- a/views/movies/newmovie.ejs
+++ b/views/movies/newmovie.ejs
@@ -3,41 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="public/main.css" />
     <title>New Movie</title>
   </head>
-  <body>
+  <body class="text-center bg-teal-200">
     <%- include('../partials/nav') %>
-    <h1>Creating A New Movie</h1>
+    <h1 class="text-3xl font-bold m-3">Create A New Movie</h1>
     <form action="/movies" method="POST">
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="movieName">Movie Name:</label>
-        <input type="text" name="movieName" id="movieName" />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="movieName"
+          id="movieName"
+        />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="releaseYear">Release Year:</label>
-        <input type="text" name="releaseYear" id="releaseYear" />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="releaseYear"
+          id="releaseYear"
+        />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="genre">Genre:</label>
-        <input type="text" name="genre" id="genre" />
+        <input class="bg-gray-300" type="text" name="genre" id="genre" />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="director">Director:</label>
-        <input type="text" name="director" id="director" />
+        <input class="bg-gray-300" type="text" name="director" id="director" />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="stillinTheaters">Still in Theaters:</label>
-        <input type="text" name="stillinTheaters" id="stillinTheaters" />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="stillinTheaters"
+          id="stillinTheaters"
+        />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="description">Description:</label>
-        <input type="text" name="description" id="description" />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="description"
+          id="description"
+        />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="coverPhotoUrl">coverPhotoUrl:</label>
-        <input type="text" name="coverPhotoUrl" id="coverPhotoUrl" />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="coverPhotoUrl"
+          id="coverPhotoUrl"
+        />
       </div>
-      <button type="submit">Add Movie</button>
+      <button class="animate-pulse" type="submit">Add Movie</button>
     </form>
   </body>
 </html>
