--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <%- include('../partials/nav') %>
     <h1>Movie Reviewer Page</h1>
     <section>
       <h2>Movie Name:<%= movie.movieName %></h2>
