added tailwind to review.ejs and edit.ejs

--- a/views/movies/newmovie.ejs
+++ b/views/movies/newmovie.ejs
@@ -10,7 +10,11 @@
   <body class="text-center bg-teal-200">
     <%- include('../partials/nav') %>
     <h1 class="text-3xl font-bold m-3">Create A New Movie</h1>
-    <form action="/movies" method="POST">
+    <form
+      class="w-screen h-screen flex-col flex items-center text-center justify-center bg-teal-200"
+      action="/movies"
+      method="POST"
+    >
       <div
         class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
       >
