--- a/views/movies/review.ejs
+++ b/views/movies/review.ejs
@@ -3,27 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="public/main.css" />
     <title>Document</title>
   </head>
-  <body>
-    <%- include('../partials/nav') %>
-    <form action="/movies/<%= movie._id %>/review" method="POST">
-      <div>
+
+  <%- include('../partials/nav') %>
+  <body class>
+    <form
+      class="w-screen h-screen flex-col flex items-center text-center justify-center bg-teal-200"
+      method="POST"
+      action="/movies/<%= movie._id %>/review"
+    >
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="userName">User Name: </label>
-        <input type="text" name="userName" id="userName" required />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="userName"
+          id="userName"
+          required
+        />
       </div>
 
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="reviews">Review: </label>
         <textarea
+          class="bg-gray-300"
           id="reviews"
           name="reviews"
           maxlength="1500"
           required
         ></textarea>
       </div>
-
-      <button type="submit">SUBMIT</button>
+      <button
+        class="w-80 grid p-5 mb-7 font-semibold border-2 animate-pulse"
+        type="submit"
+      >
+        Submit
+      </button>
     </form>
   </body>
 </html>
