--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,13 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="text-center text-blue-800 bg-gray-200 animate-pulse"
+    <nav class="text-center text-blue-800 bg-gray-200 animate-pulse">
       <a href="/">Home</a>
-     <a href="/">Movie List</a>
       <a href="/movies/new">Add A Review</a>
-      <a href = "/movies/review">Reviews</a>
-      <a href = "/movies/newmovie">Create A New Movie</a>
-     
+      <a href="/movies/:id/review">Reviews</a>
+      <a href="/movies/new">Create A New Movie</a>
     </nav>
   </body>
 </html>
