--- a/views/movies/edit.ejs
+++ b/views/movies/edit.ejs
@@ -3,64 +3,98 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="public/main.css" />
     <title>Movie Edit Page</title>
   </head>
   <body>
     <%- include("../partials/nav") %>
-    <h1>Movie Name - <%= movie.name %></h1>
-    <form method="POST" action="/movies/<%=movie._id%>?_method=PUT">
-      <div>
+    <h1 class="text-3xl font-bold m-3 flex-col flex text-center">
+      Movie Name <%= movie.name %>
+    </h1>
+    <form
+      class="w-screen h-screen flex-col flex items-center text-center justify-center bg-teal-200"
+      method="POST"
+      action="/movies/<%=movie._id%>?_method=PUT"
+    >
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="movieName">Movie Name:</label>
         <input
+          class="bg-gray-300"
           type="text"
           name="movieName"
           id="movieName"
           value="<%= movie.movieName %>"
         />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="releaseYear">Release Year:</label>
         <input
+          class="bg-gray-300"
           type="text"
           name="releaseYear"
           id="releaseYear"
           value="<%= movie.releaseYear %>"
         />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="genre">Genre:</label>
-        <input type="text" name="genre" id="genre" value="<%= movie.genre %>" />
+        <input
+          class="bg-gray-300"
+          type="text"
+          name="genre"
+          id="genre"
+          value="<%= movie.genre %>"
+        />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="director">Director:</label>
         <input
+          class="bg-gray-300"
           type="text"
           name="director"
           id="director"
           value="<%= movie.director %>"
         />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="stillinTheaters">Still in Theaters:</label>
         <input
+          class="bg-gray-300"
           type="text"
           name="stillinTheaters"
           id="stillinTheaters"
           value="<%= movie.stillinTheaters %>"
         />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="description">Description:</label>
         <input
+          class="bg-gray-300"
           type="text"
           name="description"
           id="description"
           value="<%= movie.description %>"
         />
       </div>
-      <div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-200 rounded-xl"
+      >
         <label for="coverPhotoUrl">coverPhotoUrl:</label>
         <input
+          class="bg-gray-300"
           type="text"
           name="coverPhotoUrl"
           id="coverPhotoUrl"
@@ -68,7 +102,7 @@
         />
       </div>
 
-      <button type="submit">Edit Movie</button>
+      <button class="animate-pulse" type="submit">Edit Movie</button>
     </form>
   </body>
 </html>
