created pull request to merge into main

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,16 +8,11 @@
     <link rel="stylesheet" href="public/main.css" />
   </head>
   <body>
-    <nav class="
-    flex justify-center items-center 
-    h-8 gap-3 underline bg-teal-100 
-    w-screen
-    
-    ">
+    <nav
+      class="flex justify-center items-center h-8 gap-3 underline bg-teal-100 w-screen"
+    >
       <a href="/">Home</a>
-      <a href="/movies/new">Add A Review</a>
-      <a href="/movies/:id/review">Reviews</a>
-      <a href="/movies/new">Create A New Movie</a>
+      <a href="/movies/new">Create A Movie</a>
     </nav>
   </body>
 </html>
