minor errors had to clean up

--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -7,60 +7,49 @@
     <link rel="stylesheet" href="public/main.css" />
     <title>Document</title>
   </head>
-  <body class=" text-center w-full bg-teal-200 flex flex-col
-  justify-center 
-  items-center">
+  <body
+    class="text-center w-full bg-teal-200 flex flex-col justify-center items-center"
+  >
     <%- include('../partials/nav') %>
-    <section class="
-    mt-4
-    flex 
-    justify-around 
-    items-center 
-    w-9/12 p-9  bg-white
-    font-semibold border-2 bg-green-300
-    rounded-xl
-     ">
-
-     <div class="w-80 flex flex-col items-center">
-       <h2>Movie Name:<%= movie.movieName %></h2>
-       <img width="340px" src="<%= movie.coverPhotoUrl %>" alt="" />
-       <h2>Genre:<%= movie.genre %></h2>
-       <br>
-       <p>Description: <%= movie.description %></p>
-       <br>
-       <% if (movie.stillinTheaters) { %>
-       <p>This movie is still in theaters</p>
-       <% } else { %>
-       <p>This movie is no longer in theaters</p>
-       <% } %>
-       <% movie.userReviews.forEach(review => { %>
+    <section
+      class="mt-4 flex justify-around items-center w-9/12 p-9 bg-white font-semibold border-2 bg-green-300 rounded-xl"
+    >
+      <div class="w-80 flex flex-col items-center">
+        <h2>Movie Name:<%= movie.movieName %></h2>
+        <img width="340px" src="<%= movie.coverPhotoUrl %>" alt="" />
+        <h2>Genre:<%= movie.genre %></h2>
+        <br />
+        <p>Description: <%= movie.description %></p>
+        <br />
+        <% if (movie.stillinTheaters) { %>
+        <p>This movie is still in theaters</p>
+        <% } else { %>
+        <p>This movie is no longer in theaters</p>
+        <% } %> <% movie.userReviews.forEach(review => { %>
         <hr />
       </div>
-      
-      <div class=" flex flex-col items-center ">
-       <h2>Reviews:</h2>
-       <br><br><br>
-       <div>
-         <p><%=review.reviews %></p>
-         <p>written by: <%=review.userName%></p>
 
-       </div>
-       <br><br>
-       <%}) %>
-       <hr />
- 
-       <a class="text-blue-500" href="/movies/<%=movie._id%>/review/new"
-         >Add a review for this movie</a
-       >
-       <form method="POST" action="/movies/<%=movie._id%>?_method=DELETE">
-         <button class="text-blue-500"  type="submit">Delete Movie</button>
-       </form>
-       <a href="/movies/<%=movie._id%>/edit">
-         <button class="text-blue-500"  type="submit">Edit Movie</button>
-       </a>
-     </div>
+      <div class="flex flex-col items-center">
+        <h2>Reviews:</h2>
+        <br /><br /><br />
+        <div>
+          <p><%=review.reviews %></p>
+          <p>written by: <%=review.userName%></p>
+        </div>
+        <br /><br />
+        <%}) %>
+        <hr />
+
+        <a class="text-blue-500" href="/movies/<%=movie._id%>/review/new"
+          >Add a review for this movie</a
+        >
+        <form method="POST" action="/movies/<%=movie._id%>?_method=DELETE">
+          <button class="text-blue-500" type="submit">Delete Movie</button>
+        </form>
+        <a href="/movies/<%=movie._id%>/edit">
+          <button class="text-blue-500" type="submit">Edit Movie</button>
+        </a>
+      </div>
     </section>
-
-    
   </body>
 </html>
