--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,6 +13,11 @@
     >
       <a href="/">Home</a>
       <a href="/movies/new">Create A Movie</a>
+      <% if (user) { %>
+      <a href="/auth/sign-out">Sign out</a>
+      <%} else {%>
+      <a href="/auth/sign-in">Sign in</a>
+      <%}%>
     </nav>
   </body>
 </html>
