fixed the route for login page

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,6 +1,10 @@
 <%- include('../partials/nav.ejs') %>
 <h1>Sign in</h1>
-<form action="/auth/sign-in" method="POST">
+<form
+  class="w-screen h-screen flex-col flex items-center text-center justify-center bg-teal-200"
+  action="/auth/sign-in"
+  method="POST"
+>
   <label for="username">Username:</label>
   <input type="text" name="username" id="username" />
   <label for="password">Password:</label>
