--- a/views/movies/newmovie.ejs
+++ b/views/movies/newmovie.ejs
@@ -55,7 +55,7 @@
         <label for="stillinTheaters">Still in Theaters:</label>
         <input
           class="bg-gray-300"
-          type="text"
+          type="checkbox"
           name="stillinTheaters"
           id="stillinTheaters"
         />
