--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,13 +11,14 @@
     <nav
       class="flex justify-center items-center h-8 gap-3 underline bg-teal-100 w-screen"
     >
-      <a href="/">Home</a>
+      <a href="/movies">Home</a>
       <a href="/movies/new">Create A Movie</a>
       <% if (user) { %>
       <a href="/auth/sign-out">Sign out</a>
-      <%} else {%>
+      <% } else { %>
       <a href="/auth/sign-in">Sign in</a>
-      <%}%>
+      <a href="/auth/sign-up">Sign-up</a>
+      <% } %>
     </nav>
   </body>
 </html>
