--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -5,7 +5,11 @@
 <!-- method -> POST -->
 <!-- action -> /auth/<path> -->
 <!-- form -> search form that makes a get and set the action to /resource?products="cat" -->
-<form action="/auth/sign-up" method="POST">
+<form
+  class="w-screen h-screen flex-col flex items-center text-center justify-center bg-teal-200"
+  action="/auth/sign-up"
+  method="POST"
+>
   <label for="username">Username:</label>
   <input type="text" name="username" id="username" />
   <label for="password">Password:</label>
