added finally a google sign in but now my log in isnt working

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,10 +14,10 @@
       <a href="/movies">Home</a>
       <a href="/movies/new">Create A Movie</a>
       <% if (user) { %>
-      <a href="/auth/sign-out">Sign out</a>
+      <a href="/auth/sign-out">SIGN OUT</a>
       <% } else { %>
-      <a href="/auth/sign-in">Sign in</a>
-      <a href="/auth/sign-up">Sign-up</a>
+      <a href="/auth/google" class="login">SIGN IN WITH GOOGLE</a>
+
       <% } %>
     </nav>
   </body>
