--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -7,35 +7,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="public/main.css" />
   </head>
-  <body class="text-center bg-teal-200  ">
+  <body class="text-center bg-teal-200">
     <%- include('../partials/nav') %>
     <h1 class="text-3xl font-bold m-3">FILM FANATICS</h1>
     <hr />
-    <div class=" grid grid-cols-4  p-3  ">
+    <div class="grid grid-cols-5 p-3">
       <% movies.forEach(movie => { %>
-      <div class="
-      w-80 grid p-5 mb-7  bg-white
-      font-semibold border-2 bg-green-300
-      rounded-xl">
-        
-          <h2 class="text-2xl font-semibold" >
-            <%=movie.movieName%>
-          </h2>
-          <img 
-            width="500px"
-            class="rounded-xl"
-            src="<%=movie.coverPhotoUrl%>"
-            alt=""
-          />
-          <p class="text-sm">Release Year: <%=movie.releaseYear%></p>
-          <p class="text-sm">Director: <%=movie.director%></p>
-          <p class="text-sm">Genre: <%=movie.genre%></p>
-          <p class="text-sm">
-            Description: <%=movie.description%>
-          </p>
-          <a class="underline " href="/movies/<%= movie._id%>">See more</a>
-          <hr />
-        </div>
+      <div
+        class="w-80 grid p-5 mb-7 bg-white font-semibold border-2 bg-green-300 rounded-xl"
+      >
+        <h2 class="text-2xl font-semibold"><%=movie.movieName%></h2>
+        <img
+          width="500px"
+          class="rounded-xl"
+          src="<%=movie.coverPhotoUrl%>"
+          alt=""
+        />
+        <p class="text-sm">Release Year: <%=movie.releaseYear%></p>
+        <p class="text-sm">Director: <%=movie.director%></p>
+        <p class="text-sm">Genre: <%=movie.genre%></p>
+        <p class="text-sm">Description: <%=movie.description%></p>
+        <a class="underline" href="/movies/<%= movie._id%>">See more</a>
+        <hr />
+      </div>
       <%})%>
     </div>
   </body>
