--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="public/main.css" />
-    <title>Document</title>
+    <title>Film Fanatics</title>
   </head>
   <body
     class="text-center w-full bg-teal-200 flex flex-col justify-center items-center"
